@@ -18,6 +18,7 @@ import org.elasticsearch.xpack.esql.evaluator.mapper.EvaluatorMapper;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 
 import java.io.IOException;
 import java.util.List;
@@ -60,9 +61,10 @@ public class ToRadians extends AbstractConvertFunction implements EvaluatorMappe
             name = "number",
             type = { "double", "integer", "long", "unsigned_long" },
             description = "Input value. The input can be a single- or multi-valued column or an expression."
-        ) Expression field
+        ) Expression field,
+        QueryPragmas pragmas
     ) {
-        super(source, field);
+        super(source, field, pragmas);
     }
 
     private ToRadians(StreamInput in) throws IOException {
@@ -81,12 +83,12 @@ public class ToRadians extends AbstractConvertFunction implements EvaluatorMappe
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new ToRadians(source(), newChildren.get(0));
+        return new ToRadians(source(), newChildren.getFirst(), getPragmas());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, ToRadians::new, field());
+        return NodeInfo.create(this, ToRadians::new, field(), getPragmas());
     }
 
     @Override
