@@ -27,7 +27,7 @@ public class ToCartesianPointErrorTests extends ErrorsForCasesWithoutExamplesTes
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToCartesianPoint(source, args.get(0));
+        return new ToCartesianPoint(source, args.getFirst(), getPragmas());
     }
 
     @Override
