@@ -77,6 +77,6 @@ public class ToCartesianPointTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToCartesianPoint(source, args.get(0));
+        return new ToCartesianPoint(source, args.getFirst(), getPragmas());
     }
 }
