@@ -27,7 +27,7 @@ public class ToDateNanosErrorTests extends ErrorsForCasesWithoutExamplesTestCase
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToDateNanos(source, args.get(0));
+        return new ToDateNanos(source, args.getFirst(), getPragmas());
     }
 
     @Override
