@@ -76,7 +76,7 @@ public class ToDatePeriodTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToDatePeriod(source, args.get(0));
+        return new ToDatePeriod(source, args.getFirst(), getPragmas());
     }
 
     @Override
