@@ -27,7 +27,7 @@ public class ToStringErrorTests extends ErrorsForCasesWithoutExamplesTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToString(source, args.get(0));
+        return new ToString(source, args.getFirst(), getPragmas());
     }
 
     @Override
