@@ -146,6 +146,6 @@ public class ToStringTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToString(source, args.get(0));
+        return new ToString(source, args.getFirst(), getPragmas());
     }
 }
