@@ -27,7 +27,7 @@ public class ToTimeDurationErrorTests extends ErrorsForCasesWithoutExamplesTestC
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToTimeDuration(source, args.get(0));
+        return new ToTimeDuration(source, args.getFirst(), getPragmas());
     }
 
     @Override
