@@ -27,7 +27,7 @@ public class ToUnsignedLongErrorTests extends ErrorsForCasesWithoutExamplesTestC
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToUnsignedLong(source, args.get(0));
+        return new ToUnsignedLong(source, args.getFirst(), getPragmas());
     }
 
     @Override
