@@ -65,6 +65,6 @@ public class ToVersionTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToVersion(source, args.get(0));
+        return new ToVersion(source, args.getFirst(), getPragmas());
     }
 }
